# monitor-core

./: .gitignore  .gitmodules  .htaccess.in  .travis.yml  AUTHORS  BUGS  COPYING  ChangeLog  INSTALL  Makefile  Makefile.am  NEWS  README  README.AIX  README.GIT  README.OPENBSD  README.SVN  README.SVNusers  README.WIN  README.md  README.svn2git  STATUS  THIRDPARTY  TODO  acinclude.m4  actions.php  aggregate_graphs.php  auth.php  authors.txt  autorotation.php  bootstrap  cache.php  calendar.php  check_extensions.php  clean.sh  cluster_view.php  conf.php  conf.php.in  conf_default.php.in  config.h.in  (+46 more)
gexec/authd/: COPYING  ChangeLog  Makefile.am  Makefile.in  auth.c  authd.c  authd.h  authd.spec  authd.spec.in  authd_options.c  authd_options.h  config.h.in  configure  configure.in
gexec/gexec/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  acconfig.h  configure.ac  configure.in  gexec.c  gexec.h  gexec.spec  gexec.spec.in  gexec_lib.c  gexec_lib.h  gexec_options.c  gexec_options.h  gexec_state.h  gexecd.c  gexecd.h  gexecd_options.c  gexecd_options.h  msg.h  request.c  request.h
gexec/gexec-authd/: ChangeLog  Makefile.am  auth.c  auth.h  authd.c  authd.h  authd_options.c  authd_options.h  autogen.sh  clean.sh  config.h  config.h.in  configure.ac  gexec-authd.spec.in
gexec/libe/: .cvsignore  AUTHORS  COPYING  ChangeLog  Makefile.am  anet.c  anet.h  autogen.sh  barrier.c  barrier.h  bitmask.c  bitmask.h  bytes.h  clean.sh  configure.ac  configure.in  cpa.c  cpa.h  e_error.c  e_error.h  hash.c  hash.h  io.c  io.h  libe.spec  libe.spec.in  llist.c  llist.h  net.c  net.h  pack.c  pack.h  safe.c  safe.h  token_array.c  token_array.h  tree.c  tree.h  xmalloc.c  xmalloc.h
gexec/pcp/: AUTHORS  ChangeLog  Makefile.am  config.h.in  configure.ac  gexec-pcp.spec.in  mkinstalldirs  msg.h  pcp.c  pcp.h  pcp.spec.in  pcp_lib.c  pcp_lib.h  pcp_options.c  pcp_options.h  pcpd.c  pcpd.h  pcpd_options.c  pcpd_options.h
gmetad/: Makefile.am  build_xml_hash  circuit_breaker.c  cleanup.c  cmdline.c  cmdline.c.in  cmdline.h  cmdline.sh  conf.c  conf.c.in  conf.h  daemon_init.c  daemon_init.h  data_thread.c  export_helpers.c  export_helpers.h  gmetad.aix.init  gmetad.c  gmetad.conf  gmetad.conf.in  gmetad.h  gmetad.init  gmetad.init.SuSE  gmetad.service.in  metric_hash.c  process_xml.c  rrd_helpers.c  rrd_helpers.h  server.c  server_priv.h  type_hash.c  type_hash.gperf  xml_hash.c  xml_hash.gperf
gmetric/: Makefile.am  cmdline.c  cmdline.c.in  cmdline.h  cmdline.sh  gmetric.c
gmond/: Makefile.am  cleanup.c  cmdline.c  cmdline.c.in  cmdline.h  cmdline.sh  conf.c  conf.h  conf.pod  dtd.h  g25_config.c  g25_config.h  gm_mmn.h  gmond.aix.init  gmond.c  gmond.conf  gmond.init  gmond.init.SuSE  gmond.service.in  gmond_internal.h  metric.h  sflow.c  sflow.h  sflow_gmetric.h
gmond/gstat/: Makefile.am  cmdline.c  cmdline.h  cmdline.sh  gstat.c
gmond/modules/: Makefile.am
gmond/perl_modules/: Makefile.am
gmond/php_modules/: Makefile.am
gmond/python_modules/: Makefile.am
gstat/: Makefile.am  cmdline.c  cmdline.h  cmdline.sh  gstat.c
lib/: GangliaAcl.php  GangliaAuth.php  Makefile.am  apr_net.c  apr_net.h  barrier.c  barrier.h  become_a_nobody.c  become_a_nobody.h  cloud.c  cloud.h  daemon_inetd.c  daemon_init.c  debug_msg.c  debug_msg.h  default_conf.h.in  dotconf.c  dotconf.h  error.c  error_msg.c  error_msg.h  file.c  file.h  ganglia.c  ganglia.h  ganglia_priv.h  gm_protocol.x  gm_scoreboard.h  hash.c  hash.h  inetaddr.c  libgmond.c  llist.c  llist.h  mcast.c  my_inet_ntop.c  my_inet_ntop.h  net.h  protocol.x  rdwr.c  (+7 more)
libmetrics/: ChangeLog  INSTALL  Makefile.am  NEWS  README  bootstrap  configure.ac  configure.in  debug_msg.c  error.c  get_ifi_info.c  interface.c  libmetrics.h
libmetrics/aix/: metrics.c
libmetrics/cygwin/: Makefile.am  metrics.c
libmetrics/darwin/: Makefile.am  metrics.c
libmetrics/dragonfly/: metrics.c
libmetrics/freebsd/: Makefile.am  metrics.c
libmetrics/hpux/: metrics.c
libmetrics/irix/: metrics.c
libmetrics/linux/: Makefile.am  fsusage.c  metrics.c
libmetrics/mingw/: metrics.c
libmetrics/netbsd/: metrics.c
libmetrics/openbsd/: metrics.c
libmetrics/osf/: metrics.c
libmetrics/solaris/: Makefile.am  metrics.c
libmetrics/tests/: Makefile.am  test-metrics.c
monitor-core/: AUTHORS  COPYING  INSTALL  Makefile.WiX  Makefile.am  README.AIX  README.CVSusers  README.SVNusers  README.WIN  STATUS  acinclude.m4  bootstrap  configure.in  ganglia.aix.spec  ganglia.pod  ganglia.spec.aix  ganglia.spec.in
monitor-core-3.1/tests/: Makefile.am  xdrserver.c
monitor-core-3.1/web/: Makefile.am  cluster_view.php  footer.php  functions.php  grid_tree.php  host_view.php
monitor-core/WiX/: ganglia-gmond.wxs
monitor-core/contrib/: README.contrib  check_ganglia.py  diskfree_report.php  ganglia-hosts-lowercase.sh  ganglia-rrd-modify.pl
monitor-core/debian/: README.Debian  apache.conf  changelog  control  ganglia-monitor.conffiles  ganglia-monitor.init  ganglia-monitor.postrm  ganglia-webfrontend.postrm  gmetad.conf  gmetad.conffiles  gmetad.dirs  gmetad.init  gmetad.postrm  gmond.conf  libganglia1-dev.dirs  libganglia1.install  rules
monitor-core/gmetad/: Makefile.am  cleanup.c  cmdline.c  cmdline.h  cmdline.sh  conf.c  conf.c.in  conf.h  daemon_init.c  data_thread.c  gmetad-default  gmetad.aix.init  gmetad.c  gmetad.conf  gmetad.conf.in  gmetad.h  gmetad.init  metric_hash.c  process_xml.c  rrd_helpers.c  rrd_helpers.h  server.c  xml_hash.c  xml_hash.gperf
monitor-core/gmetad-python/: README  TODO  gmetad-python.conf.in  gmetad.py  gmetad_config.py  gmetad_config.py.in  gmetad_consistency_test.py  gmetad_daemon.py  gmetad_data.py  gmetad_element.py  gmetad_gmondReader.py  gmetad_random.py  gmetad_xmlWriter.py  setup.py.in
monitor-core/gmetric/: Makefile.am  cmdline.c  cmdline.h  cmdline.sh  gmetric.c
monitor-core/gmond/: Makefile.am  cleanup.c  cmdline.c  cmdline.h  cmdline.sh  conf.c  conf.h  conf.pod  core_metrics.c  dtd.h  g25_config.c  g25_config.h  gm_mmn.h  gmond.aix.init  gmond.c  gmond.conf  gmond.init  metric.h  (+5 more)
srclib/: Makefile.am
(+1015 files in other folders)
